# histafrica-backend

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  run.sh  test.sh
.github/workflows/: branch.yaml
src/framework/: asgi.py  config.py  settings.py  urls.py  wsgi.py
src/framework/settings/: __init__.py  __settings.py
src/histafrica/: conftest.py  pytest_plugin.py
src/histafrica/category/domain/: entity.py  validators.py
src/histafrica/category/tests/unit/domain/: test_category.py  test_validators.py
src/histafrica/shared/application/: dto.py  use_case.py
src/histafrica/shared/domain/: entity.py  exceptions.py  repository.py  validators.py  value_objects.py
src/histafrica/shared/infra/django_app/: exception_handler.py  serializers.py
src/histafrica/shared/tests/: test_repository.py
src/histafrica/shared/tests/unit/application/: test_dto.py  test_use_cases.py
src/histafrica/shared/tests/unit/domain/: test_entity.py  test_validator.py  test_value_objects.py
src/histafrica/shared/tests/unit/infra/: test_serializer.py
