[tool.poetry]
name = "histafrica-backend"
version = "0.1.0"
description = ""
authors = ["jose.tandavala <jose.tandavala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
safety = "^3.2.6"
bandit = "^1.7.9"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
pylint = "^3.2.6"

[tool.isort]
profile = "black"  # Or any other profile like "django", "google"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
