[project]
name = "histafrica-backend"
version = "0.1.0"
description = ""
authors = ["jose.tandavala <jose.tandavala@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "drf-nested-routers>=0.94.1",
    "psycopg>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-decouple>=3.8",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.6.8",
    "commitizen>=3.29.1",
]
